infra/k8s/prod/cotation-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cotation-service
  namespace: valoria-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cotation-service
  template:
    metadata:
      labels:
        app: cotation-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: cotation-service
          image: ghcr.io/omar229001/valoria/cotation-service:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: cotation-service
  namespace: valoria-prod
spec:
  selector:
    app: cotation-service
  ports:
    - port: 8082
      targetPort: 8000
