infra/k8s/prod/pricing-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-service
  namespace: valoria-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing-service
  template:
    metadata:
      labels:
        app: pricing-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: pricing-service
          image: ghcr.io/omar229001/valoria/pricing-service:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
  namespace: valoria-prod
spec:
  selector:
    app: pricing-service
  ports:
    - port: 8083
      targetPort: 8000
