infra/k8s/prod/scraper-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper-service
  namespace: valoria-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scraper-service
  template:
    metadata:
      labels:
        app: scraper-service
    spec:
      containers:
        - name: scraper-service
          image: ghcr.io/omar229001/valoria/scraper-service:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: scraper-service
  namespace: valoria-prod
spec:
  selector:
    app: scraper-service
  ports:
    - port: 8000
      targetPort: 8000
