infra/k8s/prod/user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: valoria-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: user-service
          image: ghcr.io/omar229001/valoria/user-service:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: valoria-prod
spec:
  selector:
    app: user-service
  ports:
    - port: 8081
      targetPort: 8081
